Fix vertical spacing between page banner and sections 3up

--- a/styleguide/source/assets/scss/03-organisms/_page-banner.scss
+++ b/styleguide/source/assets/scss/03-organisms/_page-banner.scss
@@ -28,6 +28,7 @@ $page-banner-icon-width: $column + $gutter;
 
   &--columns {
     min-height: 450px;
+    margin-bottom: 70px;
   }
 
   &__container {
